# evojax

./: Untitled.ipynb  chexpert_densenet.ipynb  imagenet_densenet.ipynb  pyproject.toml
evojax/: obs_norm.py  sim_mgr.py  trainer.py  util.py
evojax/algo/: pgpe.py
evojax/algo/cultural/: __init__.py  base.py  belief_space.py  helper_functions.py  knowledge_sources.py  population_space.py
evojax/policy/: convnet.py  convnet_mnist.py  densenet.py  kan.py
evojax/task/: chexpert.py  cifar10.py  mnist.py
examples/: train_chexpert.py  train_cifar10.py  train_mnist.py
log/chexpert/: CheXpert.txt
log/cifar10/: CIFAR10.txt
log/mnist/: MNIST.txt
notebook_output/DenseNet/: events.out.tfevents.1704408762.fuxS0ci3ty.3960735.10  events.out.tfevents.1704417687.fuxS0ci3ty.3960735.11  events.out.tfevents.1704418386.fuxS0ci3ty.3960735.12  events.out.tfevents.1705102846.fuxS0ci3ty.1437733.0  events.out.tfevents.1705103481.fuxS0ci3ty.1437733.1  events.out.tfevents.1705103652.fuxS0ci3ty.1437733.2
notebook_output/DenseNet/checkpoint_2.orbax-checkpoint-tmp-1705102950238665/: _METADATA
notebook_output/saved_models/DenseNet/: events.out.tfevents.1705103788.fuxS0ci3ty.1437733.3  events.out.tfevents.1705104266.fuxS0ci3ty.1437733.4  events.out.tfevents.1705105058.fuxS0ci3ty.1437733.5  events.out.tfevents.1705105094.fuxS0ci3ty.1437733.6  events.out.tfevents.1705105198.fuxS0ci3ty.1437733.7  events.out.tfevents.1705105308.fuxS0ci3ty.1437733.8  events.out.tfevents.1705106469.fuxS0ci3ty.1437733.9  events.out.tfevents.1705106859.fuxS0ci3ty.1537994.0
